# learn

./: .gitignore  CMakeLists.txt  Makefile.am  Makefile_generic  SimpleProfiler.h  array_container.cpp  body.h  configure.ac  constructor_exception.cpp  constructor_exception.h  create_pch.sh  habr_packet_capture.cpp  habr_packet_capture_build.sh  http_server.cpp  http_server.h  learn1.h  learn1_daemon  learn_casts.cpp  learn_classes.cpp  learn_map.cpp  learn_priority_queue.cpp  learn_resources.cpp  learn_rtti.cpp  learn_set.cpp  learn_signals.cpp  learn_signals.h  learn_signals_include.h  learn_system.cpp  learn_system.h  lesson.txt  main.cpp  main_wget.c  memory_map.cpp  message_queue.cpp  model.h  openwrt_build.sh  packets_per_second.sh  posix_memory_map.cpp  posix_semaphores.cpp  posix_threads.cpp  (+14 more)
qemu/: create_disk.sh  install.sh  qemu.txt  start.sh
small_progs/: TransferRingBufferTest.cpp  TransferRingBufferTest_build.sh  align_int64.cpp  arithmetic_benchmark.cpp  atomic_benchmark.cpp  benchmark_get_time.cpp  benchmark_stringstream.cpp  boost_intrusive_list.cpp  build_and_run.sh  cout.cpp  create_pch.sh  fast_test.cpp  folly_vector.cpp  folly_vector_build.sh  futures.cpp  learn_exceptions.cpp  learn_multimap_multiset.cpp  learn_new.cpp  learn_other.cpp  learn_spsc_queue.cpp  learn_static_assert.cpp  learn_thread_local.cpp  learn_virtual.cpp  lock_benchmark.cpp  modify_time.py  month_calendar.py  queue_benchmark.cpp  remove_erase.cpp  rhino_test.js  sizeof.cpp  static_init.cpp  test_loop.cpp  test_pygments.py  type_limits.cpp  vimrc2
small_progs/flask_auth/: page.py
small_progs/flask_auth/templates/: page.html
small_progs/flask_calendar/: config.py  microcalendar.py  month_calendar.py  settings.py  storage.py
small_progs/flask_calendar/templates/: edit-task.html  page.html
small_progs/prog_cmake/: CMakeLists.txt  ProxySplice.cpp  learn_signals.cpp  learn_sockets.cpp  learn_stack_protector.cpp  learn_thread_id.cpp  learn_time.cpp  main.cpp
small_progs/ptrace/: CMakeLists.txt  generate_syscall_names.sh  main.cpp
small_progs/regex_std/: main.cpp
small_progs/snprintf_zero/: CMakeLists.txt  main.cpp
small_progs/socket1/: ExecsPerSecond.h  TransferRingBuffer.h  benchmark.txt  build.sh  client.cpp  client_write.cpp  message.h  server.cpp  server_poll.cpp  server_read.cpp  util.cpp  util.h
small_progs/thread_local/: build.sh  learn_thread_local.cpp  tlocal.cpp
text/: arch.txt  benchmark.txt  build_programs.txt  commands.txt  console_development.txt  cpp.txt  deb.txt  eclipse.txt  epoll_http_server.txt  gdb.txt  git.txt  lesson.txt  linux_system.txt  mc.txt  plan.txt  python.txt  svn.txt  vim.txt
tools/: ExecsPerSecond.cpp  FixedSizeAllocator.h  IncPerSecond.h  ListStorage.h  NetworkUtils.cpp  NetworkUtils.h  SimpleAllocator.h  Spinlock.h  TransferRingBuffer.h  add_subtract_days.py  alias.sh  alias2.sh  apt_my_packages.sh  astyle_my.bsh  colorize.py  create_copies.sh  doxygen_generate_callgraph  gdbinit  git-blame-colored.py  gitblamecolored.py  mygrep.py  print_hex.cpp  python_file_lock.py  rdtsc.cpp  systemd_sample.service  vimrc  vimrc2  watch_dog.py  write_file.cpp
tools/allocators/: BlockAllocator.h  CMakeLists.txt  TrivialAllocator.h  main.cpp
tools/allocators_and_maps/: CMakeLists.txt  TrivialAllocator.h  main.cpp
tools/allocators_and_maps/allocators/: CMakeLists.txt  main.cpp
tools/allocators_and_maps/map_tests/: MapTests.h
tools/allocators_and_maps/maps/: CMakeLists.txt  main.cpp
tools/bayes_classifier/: CMakeLists.txt  bayes_classifier.cpp
tools/benchmark/: ArithmeticBenchmark.cpp  ArithmeticBenchmark.h  BenchStdMap.cpp  BenchStdMap.h  BenchmarkMap.cpp  BenchmarkMap.h  BenchmarkMap.py  CMakeLists.txt  IntrusiveMapBenchmark.cpp  IntrusiveMapBenchmark.h  MapBenchmark.cpp  MapBenchmark.h  README.md  StringMapBenchmark.cpp  StringMapBenchmark.h  SwitchBenchmark.cpp  SwitchBenchmark.h  SwitchBenchmarkGen.cpp  Tools.cpp  Tools.h  generate_plots.sh  main.cpp  show_plot.py  show_plot_bar.py  switch_generator.py
tools/benchmark/tools/: README_template.md  fill_readme_template.sh  generate_plots.sh  show_plot.py  show_plot_bar.py
tools/btrfs_tools/: create_base_snapshot.sh  create_build_environment.sh  create_image.sh  debootstrap_ubuntu1404.sh  delete_snapshot.sh  mount_image.sh  umount_image.sh
tools/call_from_python_lua/: call_lua.cpp  call_python.cpp
tools/cpp_regex/: CMakeLists.txt  HttpRequest.cpp  HttpRequest.h  HttpRequestTest.cpp  TimeUtils.cpp  TimeUtils.h  main.cpp
tools/cuda/cuda_itoa/: Makefile  cuda_itoa.cu  main.cpp
tools/cuda/cuda_translate_message/: data.h  translate.cpp
tools/cuda_translate_message/: Makefile  translate.cpp  translate.cu
tools/docker_clean_debian/: Dockerfile  build_image.sh  run_bash.sh
tools/english/: english.py  english.txt
tools/file_utils/: CMakeLists.txt  FileUtils.cpp  FileUtils.h  MappedFile.h  main.cpp
tools/gcc/: run_gcc_configure.sh
tools/gdb/: gdbinit
tools/get_startup_path/: Makefile  get_startup_path.cpp
tools/git_config/: gitconfig
tools/hello_kernel_module/: Makefile  hello_module.c
tools/l2tp/etc/ppp/: options.l2tp
tools/mc_ini/: ini
tools/mc_skin/: dark-editor.ini
tools/mc_user_menu/: menu
tools/multicast/: Makefile  receiver.cpp  sender.cpp
tools/ptrace/: CMakeLists.txt
tools/python_binary_message_dns/: binary_message.py  dns_query.py
tools/python_plot/: fast_plot_2d.py  plot_2d.py  plot_2d_2views.py
tools/read_build_depends/: read-build-depends.pl
tools/router/: router.txt
tools/router/etc/default/: isc-dhcp-server
tools/router/etc/dhcp/: dhcpd.conf
tools/router/etc/network/: interfaces
tools/router/etc/ppp/: chap-secrets  ip-up
tools/socket_test_client/: CMakeLists.txt  main.cpp
tools/thread_pool_with_keys/: test_build.sh  test_thread_pool.cpp  thread_pool_locked.h  thread_pool_spsc.h  thread_pool_thread_locked.h  thread_pool_thread_spsc.h
tools/vim/: install_nerd_tree.sh  vimrc  vimrc_no_nerdtree  vimrc_no_nerdtree2
tools/vim/colors/: peaksea.vim  peaksea2.vim
tools/vim/vimrcs/: vimrc_with_statusline
(+1 files in other folders)
