bin_PROGRAMS = learn1			
learn1_SOURCES = array_container.cpp        habr_packet_capture.cpp  learn_priority_queue.cpp  learn_set.cpp      learn_system.cpp  memory_map.cpp     posix_memory_map.cpp  posix_threads.cpp  smart_pointers.cpp constructor_exception.cpp  http_server.cpp              learn_signals.cpp  main.cpp          message_queue.cpp  posix_semaphores.cpp  shared_memory.cpp  systemv_semaphores.cpp
#learn_resources.cpp   
learn1_CPPFLAGS = -std=c++11 -I. -O3 -pthread
learn1_CFLAGS = -std=gnu99
LDADD =  -lrt -lboost_thread -lboost_system -lpthread

